# EnumSrvCurlAPI

./: README.md
python-elisa-emulator/: server.py
src/: enum.service
src/MySQL/: CMakeLists.txt  DnsMessage.cpp  DnsMessage.hpp  HttpSyncClient.cpp  HttpSyncClient.hpp  IOServer.cpp  IOServer.h  MsgProcesssor.cpp  OperatorsList.cpp  OperatorsList.hpp  README.md  RequestClass.cpp  RequestClass.hpp  main.cpp
